Updated Skills Page
Added new model for Skills List.  Added angular xeditable for inline
editing. Added an "add technique" button to dynamically generate new
techniques. Added tabs for skill categories.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "async": "^1.x.x",
+    "angular-xeditable": "^0.1.12",
     "bcryptjs": "~2.3.0",
     "body-parser": "^1.x.x",
     "compression": "^1.x.x",
