--- a/client/bower.json
+++ b/client/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "1.3.15",
     "bootstrap-sass": "^3.3.4",
     "moment": "^2.9.0",
-    "font-awesome": "4.3.0"
+    "font-awesome": "4.3.0",
+    "angular-xeditable": "0.1.12" 
   },
   "devDependencies": {
     "angular-mocks": "1.3.15",
