--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "angular-drywall",
-  "description": "A MEAN stack User Management web app",
-  "version": "0.1.10",
+  "name": "Muay Thai Notebook",
+  "description": "A notebook web app for Muay Thai",
+  "version": "1.0",
   "keywords": [
-    "angular",
-    "drywall"
+    "Muay",
+    "Thai",
+    "Notebook"
   ],
   "license": "MIT",
   "author": {
-    "name": "Arthur C. Kao",
-    "email": "arthurckao@gmail.com"
+    "name": "Jefferson Hwang",
+    "email": "jefferson.hwang@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/arthurkao/angular-drywall"
+    "url": "https://github.com/jeffersonhwang/StrikingNotebook"
   },
   "scripts": {
     "start": "node app.js",
