--- a/client/bower.json
+++ b/client/bower.json
@@ -1,27 +1,27 @@
 {
-  "name": "Angular-Drywall",
-  "version": "0.0.2",
+  "name": "Combat Notes",
+  "version": "1.0",
   "dependencies": {
-    "angular": "1.3.15",
+    "angular": "1.4.x",
     "json3": "^3.3.0",
-    "angular-bootstrap": "0.12.0",
-    "angular-animate": "1.3.15",
-    "angular-cookies": "1.3.15",
-    "angular-resource": "1.3.15",
-    "angular-route": "1.3.15",
-    "angular-sanitize": "1.3.15",
-    "angular-touch": "1.3.15",
+    "angular-bootstrap": "^1.3.3",
+    "angular-animate": "1.4.x",
+    "angular-cookies": "1.4.x",
+    "angular-resource": "1.4.x",
+    "angular-route": "1.4.x",
+    "angular-sanitize": "1.4.x",
+    "angular-touch": "1.4.x",
     "bootstrap-sass": "^3.3.4",
     "moment": "^2.9.0",
     "font-awesome": "4.3.0",
     "angular-xeditable": "0.1.12" 
   },
   "devDependencies": {
-    "angular-mocks": "1.3.15",
-    "angular-scenario": "1.3.15"
+    "angular-mocks": "1.4.x",
+    "angular-scenario": "1.4.x"
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "1.3.15"
+    "angular": "1.4.x"
   }
 }
